 - #20 impl create referral screen
 - #19 impl referral screen
 - #16 impl add job screen
 - #13 display job closing date, job details screen
 - #13 impl job details screen
 - #11 impl job screen
 - reliability ratio
 - upvotes and downvotes
 - forms foundation
 - sync with API
 - added context to store token
 - wiki foundations
 - full login flow
 - navigation improvement
 - dotenv setup
 - added navigation
 - linter setup
 - expo init hydra-front : empty template